# find_pupil

./: CMakeLists.txt  README.md  main.cpp
